--- a/App.config
+++ b/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add name="ConnectToDB" connectionString="Data Source = LORN-DESKTOP:1521/ORCLPDB; USER ID = librarymgs; Password = 123;" providerName="Oracle.ManagedDataAccess.Client" />
+	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
